# neo-decompiler

./: .gitignore  100_PERCENT_ROADMAP.md  ANALYSIS_OPTIMIZED.md  ANALYSIS_REPORT.md  CFG_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECODER_IMPLEMENTATION.md  DECOMPILER_STATUS.md  FINAL_ACHIEVEMENT.md  FINAL_PRODUCTION_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  Justfile  LICENSE-APACHE  LICENSE-MIT  PRODUCTION_ASSESSMENT_FINAL.md  PRODUCTION_COMPLETE.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_READINESS_FINAL_AUDIT.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md  RELEASING.md  RISK_ASSESSMENT.md  SECURITY.md  SUPPORT.md  TECHNICAL_DESIGN.md  TECHNICAL_SPECIFICATION.md  TYPE_INFERENCE_SUMMARY.md  analyze_final_10.py  demo_decoder.rs  deny.toml  final_5_analysis.py  local_ci_test.sh  (+3 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml  publish-web.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1755881587858-21t2695a4.txt  session-1755881587864-tm6w9ysjp-auto-save-1755881617867.json
.planning/debug/: known-limitations-resolution.md  remaining-unpack-limitations.md
TestingArtifacts/: README.md  expected_invalid.txt  known_unsupported.txt
TestingArtifacts/edgecases/: LoopIf.manifest.json  LoopIf.nef  MethodToken.manifest.json  MethodToken.nef
TestingArtifacts/embedded/: EmbeddedSample.cs
benches/: decompiler_benchmarks.rs
config/: decompiler_config.toml
config/standards/: nep17.toml
config/syscalls/: neo_n3_syscalls.toml
decompiled_contracts/: test_results.json
decompiled_contracts/Contract1/: Contract1_decompiled.txt
decompiled_contracts/Contract_ABIAttributes/: Contract_ABIAttributes_decompiled.txt
decompiled_contracts/Contract_ABISafe/: Contract_ABISafe_decompiled.txt
decompiled_contracts/Contract_Abort/: Contract_Abort_decompiled.txt
decompiled_contracts/Contract_Array/: Contract_Array_decompiled.txt
decompiled_contracts/Contract_BigInteger/: Contract_BigInteger_decompiled.txt
decompiled_contracts/Contract_Concat/: Contract_Concat_decompiled.txt
decompiled_contracts/Contract_GoTo/: Contract_GoTo_decompiled.txt
decompiled_contracts/Contract_Lambda/: Contract_Lambda_decompiled.txt
decompiled_contracts/Contract_Params/: Contract_Params_decompiled.txt
decompiled_contracts/Contract_PostfixUnary/: Contract_PostfixUnary_decompiled.txt
decompiled_contracts/Contract_Returns/: Contract_Returns_decompiled.txt
decompiled_contracts/Contract_StaticVar/: Contract_StaticVar_decompiled.txt
decompiled_contracts/Contract_String/: Contract_String_decompiled.txt
decompiled_contracts/Contract_Switch/: Contract_Switch_decompiled.txt
decompiled_contracts/Contract_Throw/: Contract_Throw_decompiled.txt
decompiled_contracts/Contract_TryCatch/: Contract_TryCatch_decompiled.txt
decompiled_contracts/Contract_Types/: Contract_Types_decompiled.txt
disassembled_contracts/: test_results.json
docs/: testing-artifacts.md
docs/plans/: 2025-01-24-ssa-transformation-design.md  2026-03-09-nef-hardening-and-consistency.md  2026-03-19-js-decompiler-parity-hardening.md  2026-03-19-js-decompiler-port.md  2026-03-19-web-npm-package.md  2026-03-19-web-wasm-bindings.md
docs/schema/: README.md  decompile.schema.json  disasm.schema.json  info.schema.json  tokens.schema.json
examples/: README.md  README_TEMPLATE.md  basic_usage.rs  manifest_parsing_examples.md  test_ssa.rs
examples/hello_world/: HelloWorld.cs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decompile.rs  (+5 more)
generated_outputs/: generation_summary.json
js/: README.md  package.json
scripts/: fetch_test_artifacts.py  generate_all_outputs.py  test_decompiler.py  test_disasm.py
spec/: neo-decompiler-spec.tex
src/: cli.rs  decompiler.rs  disassembler.rs  error.rs  instruction.rs  lib.rs  main.rs  manifest.rs  native_contracts.rs  native_contracts_generated.rs  nef.rs  opcodes_generated.rs  syscalls.rs  syscalls_generated.rs  util.rs  web.rs
test_data/: README.md
tests/: benchmark_tests.rs  cli_smoke.rs  cli_tests.rs  corpus_replay.rs  csharp_compile.rs  decompile_artifacts.rs  integration_tests.rs  ir_pipeline.rs  mod.rs  property_tests.rs  ssa_e2e.rs  test_runner.rs  typed_declarations.rs  unit_tests.rs  web_api.rs
tools/: batch_decompile.py  extract_devpack_artifacts.py  generate_opcodes.py  scrape_native_contracts.py  scrape_syscalls.py
web/: .npmignore  README.md  index.html  main.js  package-lock.json  package.json  tsconfig.json
(+955 files in other folders)
