[package]
name = "neo-decompiler"
version = "0.1.0"
edition = "2021"
authors = ["Neo Development Team"]
license = "MIT OR Apache-2.0"
description = "A comprehensive Neo smart contract decompiler"
homepage = "https://github.com/neo-project/neo-decompiler"
repository = "https://github.com/neo-project/neo-decompiler"
readme = "README.md"
keywords = ["neo", "blockchain", "decompiler", "smart-contracts"]
categories = ["development-tools", "parsing"]

[dependencies]
# Serialization and parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env"] }
config = "0.13"

# Crypto and hashing (for Neo-specific operations)
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = "0.27"
hex = "0.4"

# Data structures and algorithms
petgraph = "0.6"  # For control flow graphs
indexmap = "1.9"  # For ordered maps
bitvec = "1.0"    # For bit manipulation

# Parallel processing
rayon = { version = "1.7", optional = true }

# Plugin system
libloading = { version = "0.8", optional = true }  # Dynamic library loading
inventory = { version = "0.3", optional = true }   # Plugin registration

# Optional features
colored = { version = "2.0", optional = true }
syntect = { version = "5.0", optional = true }

# Additional dependencies for CLI
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"         # Benchmarking
proptest = "1.0"         # Property-based testing
tempfile = "3.0"         # Temporary files for tests
assert_cmd = "2.0"       # CLI testing
predicates = "3.0"       # Test assertions

[features]
default = ["cli", "syntax-highlighting"]
cli = ["dep:colored"]
syntax-highlighting = ["dep:syntect"]
plugin-system = ["dep:libloading", "dep:inventory"]
parallel = ["dep:rayon"]

[[bin]]
name = "neo-decompiler"
path = "src/main.rs"

[lib]
name = "neo_decompiler"
path = "src/lib.rs"

[[bench]]
name = "decompiler_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.neo-decompiler]
opt-level = 2  # Optimize this crate even in debug mode

# [workspace]
# members = [
#     "plugins/core_plugins/syscall_analyzer",
#     "plugins/core_plugins/nep_detector", 
#     "plugins/core_plugins/vulnerability_scanner",
# ]