[package]
name = "neo-decompiler"
version = "0.1.0"
edition = "2021"
authors = ["Neo Development Team"]
license = "MIT OR Apache-2.0"
description = "Minimal tooling for inspecting Neo N3 NEF bytecode"
readme = "README.md"
keywords = ["neo", "bytecode", "nef"]
categories = ["development-tools", "parser-implementations"]
repository = "https://github.com/r3e-network/neo-decompiler"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[features]
default = []

[[bin]]
name = "neo-decompiler"
path = "src/main.rs"

[lib]
name = "neo_decompiler"
path = "src/lib.rs"
