[package]
name = "neo-decompiler"
version = "0.5.0"
edition = "2021"
authors = ["Jimmy <jimmy@r3e.network>"]
license = "MIT OR Apache-2.0"
description = "Minimal tooling for inspecting Neo N3 NEF bytecode"
readme = "README.md"
keywords = ["neo", "bytecode", "nef"]
categories = ["development-tools", "parser-implementations"]
repository = "https://github.com/r3e-network/neo-decompiler"
homepage = "https://github.com/r3e-network/neo-decompiler"
documentation = "https://docs.rs/neo-decompiler"
rust-version = "1.83"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
thiserror = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ripemd = "0.1"
jsonschema = { version = "0.17", default-features = false, optional = true }
url = { version = ">=2.2,<2.6", optional = true }
time = { version = ">=0.3,<0.3.42", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
base64 = "0.21"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:jsonschema", "dep:time", "dep:url"]

[[bin]]
name = "neo-decompiler"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "test_ssa"
path = "src/bin/test_ssa.rs"

[lib]
name = "neo_decompiler"
path = "src/lib.rs"
